[package]
name = "panel"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
dotenvy    = { workspace = true }

axum = { version = "0.8", features = ["macros"] }
maud = { version = "0.27", features = ["axum"] }
rand = "0.10"
tokio-stream = "0.1"
futures = "0.3"
tower-http = { version = "0.6", features = ["cors", "fs"] }

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
reqwest = { version = "0.13", features = ["json"] }
async-stream = "0.3"
