[package]
name    = "sender"
version = "0.1.0"
edition = "2021"

# sender odpowiada za:
# 1. cykliczne wywoływanie generatora z --prev-temp / --prev-humidity
# 2. parsowanie stdout generatora: "TEMP HUMIDITY"
# 3. budowanie JSON payloadu i wysyłanie POST /{uuid}/ do weather-dashboard
# 4. zarządzanie stanem random walk (ostatnie temp/humidity między wywołaniami)
#
# Konfiguracja przez zmienne środowiskowe / .env:
#   SENDER_URL        — pełny URL endpointu POST
#                       domyślnie: http://localhost:3000/default/
#   SENDER_INTERVAL   — interwał między próbkami w sekundach
#                       domyślnie: 2
#   SENDER_SENSOR_ID  — identyfikator czujnika w payloadzie JSON
#                       domyślnie: sender-01
#   GENERATOR_BIN     — ścieżka do binarki generatora
#                       domyślnie: ./generator
#
# Format JSON wysyłany do API:
#   {
#     "sensor_id": "sender-01",
#     "ts":        1744123456.789,
#     "temp":      22.4,
#     "humidity":  58.1
#   }

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
dotenvy    = { workspace = true }
reqwest    = { workspace = true }
